another attempt to fix hero background to work on mobile with seperate css for mobile and desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,32 +363,29 @@ h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+@media only screen and (min-width: 600px) {
+  #hero {
+    width: 100vw;
+    height: 100vh;
+    background: url('../img/yellow2Hero1.jpeg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
-#hero {
-  width: 100vw;
-  height: 100vh;
-  background: url('../img/yellow2Hero1.jpeg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-
-  background-position: center center;
-  background-size: cover;
-  background-color: #e9bf65;
-  overflow: hidden;
-  padding-top: 82px;
+    background-position: center center;
+    background-size: cover;
+    background-color: #e9bf65;
+    overflow: hidden;
+    padding-top: 82px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
   #hero {
     background-position: right;
-    
-    max-width: 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-color: #e9bf65;
-    overflow: hidden;
-    padding-top: 82px;
+    height:100vh;
+    width:100%;
+    background-image:url('../img/yellow2Hero1.jpeg');
+    background-size:cover;  
   }
 }
 
